--- a/debug_toolbar/templates/debug_toolbar/panels/sql.html
+++ b/debug_toolbar/templates/debug_toolbar/panels/sql.html
@@ -19,7 +19,7 @@
 					{% if query.is_select %}
 						<a class="remoteCall" href="/__debug__/sql_select/?db={{ query.alias|default:"default" }}&amp;sql={{ query.raw_sql|urlencode }}&amp;params={{ query.params|urlencode }}&amp;duration={{ query.duration|floatformat:"2"|urlencode }}&amp;hash={{ query.hash }}">SELECT</a><br />
 						<a class="remoteCall" href="/__debug__/sql_explain/?db={{ query.alias|default:"default" }}&amp;sql={{ query.raw_sql|urlencode }}&amp;params={{ query.params|urlencode }}&amp;duration={{ query.duration|floatformat:"2"|urlencode }}&amp;hash={{ query.hash }}">EXPLAIN</a><br />
-						{% if is_mysql %}
+						{% if query.is_mysql %}
 							<a class="remoteCall" href="/__debug__/sql_profile/?db={{ query.alias|default:"default" }}&amp;sql={{ query.raw_sql|urlencode }}&amp;params={{ query.params|urlencode }}&amp;duration={{ query.duration|floatformat:"2"|urlencode }}&amp;hash={{ query.hash }}">PROFILE</a><br />
 						{% endif %}
 					{% endif %}
